# sha256sum-rs

./: Cargo.toml
src/: lib.rs  tests.rs
