[package]
name = "sha256sum-rs"
version = "2.0.1"
authors = ["Pål Nilsen <paal.nilsen@gmail.com>"]
edition = "2021"

[[bin]]
name = "sha256sum-rs"
path = "src/bin/main.rs"

[profile.release]
lto = true

[dependencies]
data-encoding = "2.3"
rayon = "1.7"
ring = "0.16"
structopt = "0.3"

[dev-dependencies]
once_cell = "1.17"
tempdir = "0.3"
