[package]
name = "sha256sum-rs"
version = "2.0.2"
authors = ["Pål Nilsen <paal.nilsen@gmail.com>"]
edition = "2024"

[[bin]]
name = "sha256sum-rs"
path = "src/bin/main.rs"

[profile.release]
lto = true

[dependencies]
data-encoding = "2.9"
rayon = "1.7"
ring = "0.17"
structopt = "0.3"

[dev-dependencies]
tempdir = "0.3"
tempfile = "3.20"
